<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">GreenUp</string>

    <string name="action_home">Home</string>
    <string name="action_map">Map</string>
    <string name="action_comments">Comments</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_login">Sign In</string>

    <string name="dummy_section_text">Section %1d is a placeholder</string>
    <string name="action_settings">Settings</string>
    <string name="home_button">Home</string>
    <string name="maps_button">Maps</string>
    <string name="comments_button">Comments</string>
	<string name="title_text">GreenUp VT</string>
	<string name="welcome_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis congue est. Cras volutpat.</string>
	<string name="start_toggle_text">Start Greening Up</string>
	<string name="stop_toggle_text">Stop Greening Up</string>
	<string name="forum_switch_text">Forum</string>
	<string name="general_switch_text">General Message</string>
	<string name="trash_switch_text">Trash Pickup</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string-array name="pin_types">
        <item>ADMIN</item>
        <item>MARKER</item>
        <item>COMMENT</item>
    </string-array>
        <string name="push_points">Push Points</string>
</resources>
